<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/ims_background">


    <ListView
        android:id="@+id/categoryList"
        android:layout_width="386dp"
        android:layout_height="335dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="250dp"
        android:theme="@style/ListFont">

    </ListView>

    <TextView
        android:id="@+id/categoryName"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="118dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtCategoryName"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="110dp"
        android:layout_toEndOf="@+id/categoryName"
        android:hint="Enter a category name"
        android:text=""
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />



    <Button
        android:id="@+id/btnDeleteCategory"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="330dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/custom_button"
        android:onClick="buttonsDeleteCategoryOnClick"

        android:text="Delete" />

    <Button
        android:id="@+id/btnCreateCategory"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:background="@drawable/custom_button"
        android:onClick="buttonsCreateCategoryOnClick"
        android:text="Create" />


</RelativeLayout>