<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/ims_background"
tools:context="comp3350.ims.presentation.JobPosition">

<TextView
    android:id="@+id/textTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/inventory_management_system"
    android:textAlignment="center"

    android:textAllCaps="true"
    android:textColor="#FFC107"
    android:textSize="30sp"
    android:textStyle="bold|italic" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignWithParentIfMissing="false"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="426dp"
        android:layout_height="267dp"
        android:src="@drawable/pic" />

    <Button
        android:id="@+id/buttonItems"
        android:layout_width="303dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="65dp"
        android:onClick="buttonCreateNewItemOnClick"
        android:background="@drawable/custom_button"
        android:layout_marginBottom="20dp"
        android:text="@string/create_new_item" />

    <Button
        android:id="@+id/buttonCategory"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:onClick="buttonCategoryOnClick"
        android:background="@drawable/custom_button"
        android:layout_marginBottom="20dp"
        android:text="Create New Category" />

    <Button
        android:id="@+id/buttonLocation"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:onClick="buttonLocationOnClick"
        android:background="@drawable/custom_button"
        android:layout_marginBottom="20dp"
        android:text="Create New Location" />

    <Button
        android:id="@+id/buttonInventory"
        android:layout_width="303dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="65dp"
        android:background="@drawable/custom_button"
        android:layout_marginBottom="20dp"
        android:onClick="buttonInventoryOnClick"

        android:text="@string/view_inventory" />

</LinearLayout>

</RelativeLayout>
